components/amoBibleReader/amoReader.css
.readers-wrapper {
    background: rgba(224, 220, 197, 0.75);
    height: 100%;
    left: 0;
    position: fixed;
    top: 0;
    width: 100%;
}

.books-wrapper {
    display: flex;
	height: 100%;
	justify-content: center;
    overflow-x: auto;
    padding: 50px 0;
    width: auto;
}

.reader-meta {
	border-radius: 4px;
    background: rgba(224, 220, 197, 0.75);
    border: 1px solid #fff;
    top: -80px;
    position: absolute;
    width: 100%;
    padding: 5px;
	padding-top: 8px;
}
.reader-meta:after {
	content: '';
    position: absolute;
    border: 5px solid transparent;
    bottom: -11px;
    left: calc(50% - 2.5px);
    border-top-color: #fff;
}
.relevant-ref {
  color: #fff;
  cursor: pointer;
  margin-top: 2px;
}
.relevant-ref:hover {
  text-decoration: underline;
}
.reader-toolbar {
	border-radius: 5px 5px 0 0;
	height: 80px;
	left: 0;
	position: absolute;
	top: 0;
	width: 100%;
}
.book-wrapper {
	border-radius: 5px;
    float: left;
    height: calc(100% - 50px);
    position: relative;
    margin-top: 25px;
}
.book-wrapper {
	margin-right: 12px;
}
.book-wrapper:first-of-type {
	margin-left: 12px;
}
.book-wrapper .toolbar-menu {
	font-size: 0.9em;
    height: 22px;
	position: absolute;
	top: -22px;
}
.toolbar-menu .tab {
	color: #fff;
    border-radius: 4px 4px 0 0;
    cursor: pointer;
	float: left;
    line-height: 18px;
    margin-left: 4px;
    padding: 2px 8px;
}
[amo-theme] .toolbar-menu .tab.active {
	background: #fff;
}
.search-box {
	padding: 8px;
}
.search-box .search-settings {
	margin-top: 8px;
}
.search-box .search-settings label {
	color: #ccc;
	cursor: default;
	padding: 2px 4px;
}
.search-box .search-settings label:hover {
	color: #877063;
}
.search-settings .results-link,
.search-settings label {
  font-size: 0.9em;
}
.search-settings input[type='radio'] {
	display: none;
}
.search-settings input[type='radio']:checked + label {
	color: #877063;
}
.cover {
	background: #fff;
	border-radius: 0 0 4px 4px;
    height: calc(100% - 50px);
    left: 0;
	overflow: auto;
	padding: 8px;
	position: absolute;
	width: 100%;
	z-index: 1;
}
.result-item {
	background: #fff;
	cursor: pointer;
	font-size: 0.9em;
	margin-bottom: 16px;
}
.result-item .amount {
	font-size: 0.9em;
}
.result-item .scripture {
	font-size: inherit;
	text-align: justify;
}
.result-item .match {
	color: #877063;
	font-size: inherit;
	font-weight: bold;
}
.results-link {
	cursor: pointer;
	float: right;
}
.more-results {
	color: #ccc;
	cursor: default;
    font-size: 0.9em;
	text-align: center;
}
.more-results:hover {
    color: #877063;
}

.book-wrapper .share-box {
	padding: 8px;
}
.book-wrapper .share-box * {
  font-size: 0.9em;
}
.book-toolbar {
	background: #fff;
	border-radius: 5px 5px 0 0;
    box-shadow: 0 3px 16px -3px rgba(0, 0, 0, .04);
	height: 80px;
	position: absolute;
	top: 0;
	width: 100%;
}
.book-toolbar .share-box {
	width: 100%;
}
.share-box .summery {
	margin: auto;
	text-align: center;
	width: 80%;
}

.book-toolbar .inp.share:focus {
	background: #fff;
	border: 1px solid #fff;
}
.inp.share,
.book-toolbar .inp.search {
	border-radius: 2px 0 0 2px;
	border-right: none;
	float: left;
	margin-right: 0;
	width: 208px;
}
.find-book {
  float: left;
  margin-right: 6px;
  width: 137px;
}
.select-book {
  margin-bottom: 6px;
  overflow-x: hidden;
}
.select-book .btn:not(:last-child) {
  margin-right: 6px;
}
.select-book .btn {
  float: left;
}
.book-toolbar .inp.txt:focus {
	outline: none;
}
.book-toolbar #bible-book:not(:focus) + .autocomplete {
	display: none;
}
.book-toolbar .select-book {
	float: left;
	min-width: 150px;
}
.autocomplete {
	background: #fff;
	box-shadow: inset 0 0 0 1px #eee;
	cursor: pointer;
    left: 8px;
	position: absolute;
    top: 44px;
	width: 269px;
	z-index: 9;
}
.autocomplete .item:hover {
	background: #eee;
}
.autocomplete .item {
	cursor: pointer;
	padding: 4px 8px;
}
.autocomplete .item.active {
  background: #eee;
}
.navigation-box {
	overflow: hidden;
	padding: 8px;
}
.book-toolbar .inp.ng-invalid-pattern {
	color: #ff7777;
}
.book-toolbar .btn.primary {
	border-radius: 0 2px 2px 0;
    color: #fff;
}
.book-toolbar .btn.collapse-books {
  padding: 0;
  width: 36px;
}
.btn.go-neighbor-book {
  font-size: 14px;
  padding: 0;
  width: 46px;
}
.book-toolbar .btn.copy,
.book-toolbar .btn.find {
	width: 76px
}
.book-toolbar .btn.go {
	float: left;
}
.navigation-agents {
	box-shadow: inset 0 0 0 1px #eee;
    border-radius: 4px;
    display: flex;
    margin: 6px 0 0 0;
    width: 100%;
}
.navigation-agents .agent {
	color: #fff;
	cursor: pointer;
	display: inline-block;
	height: 9px;
	flex-grow: 2;
	font-size: 5px;
	margin: auto;
	position: relative;
	text-align: center;
}
.navigation-agents .agent:first-child {border-radius:4px 0 0 4px;}
.navigation-agents .agent:last-child {border-radius: 0 4px 4px 0;}
.navigation-agents .agent.active {
	background: #eee;
}
.navigation-agents .agent:hover {
	color: #fff;
}
.navigation-agents .agent:hover .pointer {
	display: block;
}
.navigation-agents .agent .pointer {
    background: #fff;
    border-radius: 2px;
    display: none;
    font-size: 12px;
    height: 14px;
    line-height: 13px;
    left: 50%;
    margin-left: -10px;
    position: absolute;
    top: -20px;
    width: 20px;
}
.navigation-agents .agent .pointer:after {
    border: 4px solid transparent;
    bottom: -10px;
    content: "";
    left: 5.5px;
    position: absolute;
}

.book-toolbar .btn.remove-instance {
	cursor: pointer;
	position: absolute;
	right: 0px;
	top: -30px;
	z-index: 7;
}
.history-item {
    border-radius: 2px;
    cursor: pointer;
    font-size: 0.9em;
    padding: 2px 6px;
}
[amo-theme] .history-item.current {
    color: white;
}
	[amo-reader] {
		height: 100%;
	}
	.bible.reader {
		border-radius: 0 5px 5px 5px;
		height: calc(100% - 50px);
		overflow-y: auto;
		margin-top: 80px;
		width: 300px;
	}
	.bible.reader .book {
		float: left;
		padding: 0 16px;
		width: 33.33%;
	}
	.bible.reader .book.open {
		background: #fff;
		padding-bottom: 28px;
		width: 100%;
	}
	.bible.reader .book-name {
		color: #fff;
		cursor: pointer;
		font-size: 0.9em;
		padding: 8px 0;
	}
	.book .book-name .name {
		color: inherit;
		display: none;
	}
	.book.open .book-name .name {
		display: inline;
	}
	.book .book-name .alias {
		color: inherit;
		display: inline;
	}
	.book.open .book-name .alias {
		display: none;
	}
	.bible.reader .book-checker {
		line-height: 19px;
		margin-right: 5px;
	}
	.bible.reader .chapter-number {
		margin: 0 auto 4px;
		text-align: center;
		width: 50%;
	}
	.bible.reader .chapters {
		display: none;
	}
	.bible.reader .book.open .chapters {
		display: block;
	}
	.bible.reader .chapter {
		padding-top: 8px;
	}
	.bible.reader .verse {
		cursor: default;
		margin-bottom: 1px;
		padding: 1.5px 12px;
		text-align: justify;
	}
	.verse.spotlight .verse-num {
	  color: #ffb4b4;
	}
	.verse-num {
		color: #cebab8;
	}
	.bible.reader .verse.spotlight {
		border-radius: 2px;
		color: #fff;
	}
	.bible.reader .move-to-chapter {
    border-radius: 50%;
    cursor: pointer;
    height: 21px;
    line-height: 22px;
    margin-top: -2px;
    width: 21px;
	}
	.bible.reader .move-to-chapter svg {
		fill: #eee;
	}
	.bible.reader .move-to-chapter:hover svg {
		fill: #fff;
	}
	.bible.reader .move-to-chapter:hover {
		color: #fff;
	}
	.close-modal {
		cursor: pointer;
		position: absolute;
		right: 0;
		top: 0;
		z-index: 1;
	}
.verse-actions {
	background: #fff;
    padding: 4px;
    border-radius: 2px;
	box-shadow: 0 0 1px rgba(0,0,0, .8), 0 0 8px rgba(0,0,0, .05);
	position: fixed;
	z-index: 777;
}

.verse-actions li {
	cursor: pointer;
    list-style: none;
    padding: 2px 4px;
}
.verse-actions li.disabled {
	cursor: default;
	opacity: 0.5;
}
.verse-actions li:hover {
  color: #fff;
}
.fullscreen-trigger {
  cursor: pointer;
  height: 20px;
  margin-left: 8px;
}

.links-master {
  background: rgba(224, 220, 197, 0.75);
  bottom: 0;
  display: flex;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  width: 100%;
  z-index: 30;
}
.links-master amo-links {
  left: 10%;
  margin: auto;
  width: 80%;
}

